<resources>
    <string name="app_name">Depuis</string>
    <string name="action_settings">Settings</string>

    <string name="main_stop">Stop</string>
    <string name="main_button_share">Share</string>
    <string name="fact_share_message">Share your memory</string>
    <string name="fact_share_fact">Has been %1$s that %2$s (Depuis application by Android)</string>

    <string name="main_empty_list_title">no factModel saved</string>
    <string name="main_empty_list_subtitle">start one factModel right now</string>
    <string name="main_empty_list_new_button">Start new factModel</string>

    <string name="main_deleted">Removing %s?</string>
    <string name="main_deleted_undo">Undo</string>

    <string name="fact_close_title">Stop counting</string>
    <string name="fact_close_message">Stop counting the time, not delete it. Can not undo it!</string>
    <string name="fact_close_snack_bar_message">Fact closed. Depuis will not count the time of this factModel.</string>

    <string name="new_fact_layout_title">Save a memory that you would like to calculate the time from now</string>
    <string name="new_fact_layout_subtitle">Depuis will do it for you</string>
    <string name="new_fact_button_start">Start</string>

    <string name="new_fact_title">title</string>
    <string name="new_fact_comment">comment (optional)</string>
    <string name="new_fact_back">Back</string>
    <string name="new_fact_success">Fact created with success</string>
    <string name="new_fact_failure_title">Please, fill the title</string>

    <plurals name="elapsed_years">
        <item quantity="one">%1$d year and %2$d months and %3$d days</item>
        <item quantity="other">%1$d years and %2$d months and %3$d days</item>
    </plurals>
    <plurals name="elapsed_months">
        <item quantity="one">%1$d month and %2$d days</item>
        <item quantity="other">%1$d months and %2$d days</item>
    </plurals>
    <plurals name="elapsed_days">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <string name="elapsed_hours">%1$dh</string>
    <string name="elapsed_minutes">%1$dm</string>
    <string name="elapsed_seconds">%1$ds</string>

    <string name="about_title">Depuis is an simple application to help you count the time of an important (or not so much) factModel of your life.</string>
    <string name="about_subtitle">This application is a platform of study to me too. I\'m hoping you are like it.</string>
    <string name="about_contact">If you have any suggestion, question or feedback, please, don\'t hesitate to contact me.</string>
</resources>
