<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_fact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_accent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.orafaaraujo.depuis.view.activity.NewFactActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/new_fact_button_back"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?android:selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_arrow_back_24dp"
            tools:targetApi="lollipop"/>

        <TextView
            android:id="@+id/new_fact_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/new_fact_button_back"
            android:gravity="center"
            android:text="@string/new_fact_layout_title"
            android:textColor="@color/new_fact_accent"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_fact_text_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_fact_text_title"
            android:layout_marginTop="32dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_fact_title"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_fact_text_input_title"
            android:layout_marginTop="32dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_fact_comment"/>

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
